Fixing Project Explorer file and project name vertical text overflow

--- a/shared/client/css/style.css
+++ b/shared/client/css/style.css
@@ -130,7 +130,7 @@
 {
     .panel-stretch > .scrollable-panel-body-container
     {
-        max-height: calc(100% - 43.333px);
+        max-height: calc(100% - 80px);
         overflow: auto;
     }
 
